# study_agent

./: .gitignore  README.md  main.py  pyproject.toml  verify_infrastructure.py
config/: system_config.yaml
docs/: CONFIGURATION.md  DEPLOYMENT.md  DESIGN.md  conversation_flow_implementation.md  coordinator_implementation.md  graph_implementation.md  human_input_implementation.md  memory_persistence_implementation.md  monitoring_implementation.md  routing_implementation.md  state_sharing_mechanism.md  tool_integration.md  vllm_integration.md
examples/: conversation_flow_example.py  error_handling_example.py  graph_usage_example.py  human_input_example.py  memory_persistence_example.py  monitoring_example.py  routing_example.py  tool_usage_example.py  vllm_client_example.py
src/: __init__.py  main.py
src/agents/: __init__.py  coordinator.py  course_advisor.py  learning_planner.py
src/graph/: __init__.py  builder.py  conversation_flow.py  helpers.py  nodes.py  state.py
src/llm/: __init__.py  vllm_client.py
src/memory/: __init__.py  checkpointer.py  database.py
src/tools/: __init__.py  mcp_playwright.py  tool_manager.py  web_search.py
src/utils/: __init__.py  config.py  error_handler.py  logger.py  monitoring.py
tests/integration/: test_end_to_end_flow.py
tests/unit/: test_config.py  test_conversation_flow.py  test_coordinator.py  test_coordinator_node.py  test_course_advisor.py  test_course_advisor_node.py  test_error_handler.py  test_graph_builder.py  test_human_input_node.py  test_learning_planner.py  test_learning_planner_node.py  test_routing.py  (+5 more)
